# lemp

./: .gitignore  Cargo.toml  build.sh  pack.sh  tag-version.sh
app/: Cargo.toml
app/src/: lib.rs  maintenance_mode.rs  mariadb.rs  nginx.rs  php.rs  phpmyadmin.rs
src/: domains.rs  main.rs  maintenance_mode.rs  publish.rs  upgrade.rs
src/config/: mod.rs  mysql.rs  nginx.rs  php.rs  server_block.rs  sshd.rs
src/install/: lemp.rs  mariadb.rs  mod.rs  nginx.rs  php.rs  phpmyadmin.rs
templates/bash/: passwd.sh
templates/maintenance-mode/: index.html  nginx-server.conf
templates/mysql/: client.cnf  my.cnf
templates/nginx/: config-append.conf  default-index.html  default.conf  php-fpm-pool.conf  server-block.conf  ssl-params.conf  virtual-host.conf
templates/phpmyadmin/: phpmyadmin.conf
util/: Cargo.toml
util/src/: lib.rs
