[package]
name = "lemp"
version = "1.0.2"
authors = ["Akintomiwa <ibnakintomiwa@gmail.com>"]
edition = "2018"

[workspace]

members = [
    ".",
    "util"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "./app"}
tokio = { version = "1.28.0", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }
util = { path = "./util" }
serde_json = { version="1.0", features = ["preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
json = "*"
mysql="*"
toml = { version="0.7.6", features = ["preserve_order"] }
